--- a/Whole WF_w_dataframes.ipynb
+++ b/Whole WF_w_dataframes.ipynb
@@ -181,10 +181,425 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "0068bedb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mz</th>\n",
+       "      <th>RT</th>\n",
+       "      <th>intensity</th>\n",
+       "      <th>charge</th>\n",
+       "      <th>FWHM</th>\n",
+       "      <th>max_height</th>\n",
+       "      <th>num_of_masstraces</th>\n",
+       "      <th>masstrace_intensity</th>\n",
+       "      <th>masstrace_centroid_rt</th>\n",
+       "      <th>masstrace_centroid_mz</th>\n",
+       "      <th>isotope_distances</th>\n",
+       "      <th>Group</th>\n",
+       "      <th>is_ungrouped_monoisotopic</th>\n",
+       "      <th>dc_charge_adducts</th>\n",
+       "      <th>dc_charge_adduct_mass</th>\n",
+       "      <th>is_ungrouped_with_charge</th>\n",
+       "      <th>map_idx</th>\n",
+       "      <th>adducts</th>\n",
+       "      <th>is_backbone</th>\n",
+       "      <th>old_charge</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>39.529802865000001</td>\n",
+       "      <td>349.172005427819727</td>\n",
+       "      <td>6.483638e05</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8.939569</td>\n",
+       "      <td>75668.257812</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>[6.48363806042836e05]</td>\n",
+       "      <td>[39.529802865000001]</td>\n",
+       "      <td>[349.172005427819727]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>8497532420404919093</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>42.379768303980001</td>\n",
+       "      <td>391.182592020985794</td>\n",
+       "      <td>1.612096e06</td>\n",
+       "      <td>0</td>\n",
+       "      <td>10.832493</td>\n",
+       "      <td>183479.296875</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>[1.612096255726351e06]</td>\n",
+       "      <td>[42.379768303980001]</td>\n",
+       "      <td>[391.182592020985794]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>1021302065514414871</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>42.379768303980001</td>\n",
+       "      <td>404.190102738177075</td>\n",
+       "      <td>3.534303e05</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6.644110</td>\n",
+       "      <td>129759.664062</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>[3.534302611248636e05, 8.032523655859887e05]</td>\n",
+       "      <td>[42.379768303980001, 42.379768303980001]</td>\n",
+       "      <td>[404.190102738177075, 405.198191650642855]</td>\n",
+       "      <td>[1.00808891246578]</td>\n",
+       "      <td>1531188304737912594</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>H1</td>\n",
+       "      <td>1.007276</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>42.379768303980001</td>\n",
+       "      <td>461.235803441382416</td>\n",
+       "      <td>3.050932e05</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4.296739</td>\n",
+       "      <td>88459.125000</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>[3.050931746679126e05]</td>\n",
+       "      <td>[42.379768303980001]</td>\n",
+       "      <td>[461.235803441382416]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>14370752362800809058</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>43.264481632020001</td>\n",
+       "      <td>361.208104366155453</td>\n",
+       "      <td>2.066669e06</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5.489381</td>\n",
+       "      <td>487036.281250</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>[2.066669269290893e06]</td>\n",
+       "      <td>[43.264481632020001]</td>\n",
+       "      <td>[361.208104366155453]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>17717354507030679941</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14064</th>\n",
+       "      <td>917.212863695999999</td>\n",
+       "      <td>1321.983679608177454</td>\n",
+       "      <td>2.423242e05</td>\n",
+       "      <td>0</td>\n",
+       "      <td>11.887800</td>\n",
+       "      <td>29230.892578</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>[2.423241585391494e05]</td>\n",
+       "      <td>[917.212863695999999]</td>\n",
+       "      <td>[1321.983679608177454]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>16230232327793072483</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14065</th>\n",
+       "      <td>918.210342559979949</td>\n",
+       "      <td>420.319015627257613</td>\n",
+       "      <td>2.520901e05</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6.803956</td>\n",
+       "      <td>42458.042969</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>[2.520900600146166e05]</td>\n",
+       "      <td>[918.210342559979949]</td>\n",
+       "      <td>[420.319015627257613]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>9712883258301259330</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14066</th>\n",
+       "      <td>918.210342559979949</td>\n",
+       "      <td>1421.977424770406287</td>\n",
+       "      <td>1.326787e05</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4.103276</td>\n",
+       "      <td>38798.972656</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>[1.3267872324558e05]</td>\n",
+       "      <td>[918.210342559979949]</td>\n",
+       "      <td>[1421.977424770406287]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>3859115546576027604</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14067</th>\n",
+       "      <td>918.210342559979949</td>\n",
+       "      <td>1521.970953123048957</td>\n",
+       "      <td>2.119047e05</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6.773869</td>\n",
+       "      <td>37788.941406</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>[2.119047253454692e05]</td>\n",
+       "      <td>[918.210342559979949]</td>\n",
+       "      <td>[1521.970953123048957]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>10096857489543211695</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14068</th>\n",
+       "      <td>918.210342559979949</td>\n",
+       "      <td>1621.96447565466292</td>\n",
+       "      <td>1.695628e05</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6.759343</td>\n",
+       "      <td>30133.892578</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>[1.695628296986442e05]</td>\n",
+       "      <td>[918.210342559979949]</td>\n",
+       "      <td>[1621.96447565466292]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>431204447110753657</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>14069 rows × 20 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                        mz                    RT    intensity charge  \\\n",
+       "0       39.529802865000001   349.172005427819727  6.483638e05      0   \n",
+       "1       42.379768303980001   391.182592020985794  1.612096e06      0   \n",
+       "2       42.379768303980001   404.190102738177075  3.534303e05      1   \n",
+       "3       42.379768303980001   461.235803441382416  3.050932e05      0   \n",
+       "4       43.264481632020001   361.208104366155453  2.066669e06      0   \n",
+       "...                    ...                   ...          ...    ...   \n",
+       "14064  917.212863695999999  1321.983679608177454  2.423242e05      0   \n",
+       "14065  918.210342559979949   420.319015627257613  2.520901e05      0   \n",
+       "14066  918.210342559979949  1421.977424770406287  1.326787e05      0   \n",
+       "14067  918.210342559979949  1521.970953123048957  2.119047e05      0   \n",
+       "14068  918.210342559979949   1621.96447565466292  1.695628e05      0   \n",
+       "\n",
+       "            FWHM     max_height  num_of_masstraces  \\\n",
+       "0       8.939569   75668.257812                1.0   \n",
+       "1      10.832493  183479.296875                1.0   \n",
+       "2       6.644110  129759.664062                2.0   \n",
+       "3       4.296739   88459.125000                1.0   \n",
+       "4       5.489381  487036.281250                1.0   \n",
+       "...          ...            ...                ...   \n",
+       "14064  11.887800   29230.892578                1.0   \n",
+       "14065   6.803956   42458.042969                1.0   \n",
+       "14066   4.103276   38798.972656                1.0   \n",
+       "14067   6.773869   37788.941406                1.0   \n",
+       "14068   6.759343   30133.892578                1.0   \n",
+       "\n",
+       "                                masstrace_intensity  \\\n",
+       "0                             [6.48363806042836e05]   \n",
+       "1                            [1.612096255726351e06]   \n",
+       "2      [3.534302611248636e05, 8.032523655859887e05]   \n",
+       "3                            [3.050931746679126e05]   \n",
+       "4                            [2.066669269290893e06]   \n",
+       "...                                             ...   \n",
+       "14064                        [2.423241585391494e05]   \n",
+       "14065                        [2.520900600146166e05]   \n",
+       "14066                          [1.3267872324558e05]   \n",
+       "14067                        [2.119047253454692e05]   \n",
+       "14068                        [1.695628296986442e05]   \n",
+       "\n",
+       "                          masstrace_centroid_rt  \\\n",
+       "0                          [39.529802865000001]   \n",
+       "1                          [42.379768303980001]   \n",
+       "2      [42.379768303980001, 42.379768303980001]   \n",
+       "3                          [42.379768303980001]   \n",
+       "4                          [43.264481632020001]   \n",
+       "...                                         ...   \n",
+       "14064                     [917.212863695999999]   \n",
+       "14065                     [918.210342559979949]   \n",
+       "14066                     [918.210342559979949]   \n",
+       "14067                     [918.210342559979949]   \n",
+       "14068                     [918.210342559979949]   \n",
+       "\n",
+       "                            masstrace_centroid_mz   isotope_distances  \\\n",
+       "0                           [349.172005427819727]                  []   \n",
+       "1                           [391.182592020985794]                  []   \n",
+       "2      [404.190102738177075, 405.198191650642855]  [1.00808891246578]   \n",
+       "3                           [461.235803441382416]                  []   \n",
+       "4                           [361.208104366155453]                  []   \n",
+       "...                                           ...                 ...   \n",
+       "14064                      [1321.983679608177454]                  []   \n",
+       "14065                       [420.319015627257613]                  []   \n",
+       "14066                      [1421.977424770406287]                  []   \n",
+       "14067                      [1521.970953123048957]                  []   \n",
+       "14068                       [1621.96447565466292]                  []   \n",
+       "\n",
+       "                      Group  is_ungrouped_monoisotopic dc_charge_adducts  \\\n",
+       "0       8497532420404919093                        1.0               NaN   \n",
+       "1       1021302065514414871                        1.0               NaN   \n",
+       "2       1531188304737912594                        NaN                H1   \n",
+       "3      14370752362800809058                        1.0               NaN   \n",
+       "4      17717354507030679941                        1.0               NaN   \n",
+       "...                     ...                        ...               ...   \n",
+       "14064  16230232327793072483                        1.0               NaN   \n",
+       "14065   9712883258301259330                        1.0               NaN   \n",
+       "14066   3859115546576027604                        1.0               NaN   \n",
+       "14067  10096857489543211695                        1.0               NaN   \n",
+       "14068    431204447110753657                        1.0               NaN   \n",
+       "\n",
+       "       dc_charge_adduct_mass  is_ungrouped_with_charge  map_idx adducts  \\\n",
+       "0                        NaN                       NaN      NaN     NaN   \n",
+       "1                        NaN                       NaN      NaN     NaN   \n",
+       "2                   1.007276                       1.0      NaN     NaN   \n",
+       "3                        NaN                       NaN      NaN     NaN   \n",
+       "4                        NaN                       NaN      NaN     NaN   \n",
+       "...                      ...                       ...      ...     ...   \n",
+       "14064                    NaN                       NaN      NaN     NaN   \n",
+       "14065                    NaN                       NaN      NaN     NaN   \n",
+       "14066                    NaN                       NaN      NaN     NaN   \n",
+       "14067                    NaN                       NaN      NaN     NaN   \n",
+       "14068                    NaN                       NaN      NaN     NaN   \n",
+       "\n",
+       "       is_backbone  old_charge  \n",
+       "0              NaN         NaN  \n",
+       "1              NaN         NaN  \n",
+       "2              NaN         NaN  \n",
+       "3              NaN         NaN  \n",
+       "4              NaN         NaN  \n",
+       "...            ...         ...  \n",
+       "14064          NaN         NaN  \n",
+       "14065          NaN         NaN  \n",
+       "14066          NaN         NaN  \n",
+       "14067          NaN         NaN  \n",
+       "14068          NaN         NaN  \n",
+       "\n",
+       "[14069 rows x 20 columns]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from pandas import DataFrame\n",
     "import pandas as pd\n",
